# MSS-Multi-screen-Stream

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
gui/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.tsx  api.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  session.rs
gui/src/components/: Toast.tsx  Topbar.tsx
gui/src/screens/: ConfigureShare.tsx  ConfigureView.tsx  Home.tsx  Running.tsx
src/: gui.rs  main.rs  protocol.rs  receiver.rs  sender.rs
