[package]
name = "p2p-screenshare"
version = "0.3.0-pre.1"
edition = "2021"
description = "MSS — direct P2P multi-monitor screen sharing in Rust. One stream per remote monitor; one fullscreen window per stream on the receiver."
repository = "https://github.com/Karmahghosting/MSS-Multi-screen-Stream"
license = "MIT"

[[bin]]
name = "p2p-screenshare"
path = "src/main.rs"

[profile.release]
opt-level = 3
# "thin" gives ~95% of fat-LTO's size/speed wins and links cleanly across
# every platform we ship to (fat-LTO occasionally trips the Linux linker for
# the softbuffer+scrap dep graph).
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dependencies]
anyhow = "1"
bytemuck = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
jpeg-encoder = "0.6"
parking_lot = "0.12"
scrap = "0.5"
softbuffer = "0.4"
winit = "0.29"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zune-core = "0.5"
zune-jpeg = "0.5"
