[package]
name = "mss-gui"
version = "0.3.0-pre.1"
edition = "2021"
description = "MSS — Multi-Screen Stream launcher GUI (Tauri 2)"

# Tauri 2 wants exactly one library target named "*_lib" plus a binary.
[lib]
name = "mss_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
regex = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
# Default Tauri feature set; tauri.conf.json drives bundle/window config.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
